# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

AC_INIT()

AX_SAGA_CONFIG()

m4_include([config/saga_postgresql.m4])

AX_SAGA_CHECK_POSTGRESQL(8.0)
AC_CONFIG_HEADERS([external/soci/postgresql/postgresql-config.hpp])
AC_CONFIG_FILES([config/saga.config.postgresql.c.mk])

CPP_HAVE_SOCI_POSTGRESQL=0
if test "$HAVE_SOCI_POSTGRESQL" = "yes"; then
  CPP_HAVE_SOCI_POSTGRESQL=1
fi

AC_SUBST(CPP_HAVE_SOCI_POSTGRESQL)

# create output files
AC_CONFIG_FILES([config/make.cfg])

AC_OUTPUT()

OUT=config.summary

rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA DEFAULT ADAPTORS                                           " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION ($TMP_SAGA_INSTTYPE) " >> $OUT
echo "                                                                 " >> $OUT
echo " PostgreSQL Found      : $HAVE_POSTGRESQL $POSTGRESQL_VERSION_S  " >> $OUT
echo " PostgreSQL Location   : $POSTGRESQL_LOCATION                    " >> $OUT
echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo "                                                                 " >> $OUT


if test "$SAGA_RECURSIVE_CONFIG" = "yes" ; then
  cat $OUT >> $SAGA_ROOT/$OUT
fi

