# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

AC_INIT()

AX_SAGA_CONFIG()

m4_include([config/saga_postgresql.m4])

AX_SAGA_CHECK_POSTGRESQL(8.0)
AC_CONFIG_FILES([config/saga.config.postgresql.c.mk])

CPP_HAVE_SOCI_POSTGRESQL=0
if test "$HAVE_SOCI_POSTGRESQL" = "yes"; then
  CPP_HAVE_SOCI_POSTGRESQL=1
fi

AC_SUBST(CPP_HAVE_SOCI_POSTGRESQL)

# create output files
AC_CONFIG_FILES([config/make.cfg])

ADAPTOR_ROOT=`pwd`
ADAPTOR_CONFDIR=$ADAPTOR_ROOT/config/

AC_SUBST(ADAPTOR_ROOT)
AC_SUBST(ADAPTOR_CONFDIR)

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
TEE="tee -a"

echo "                                                                 " | $TEE $OUT
echo " ========================================================        " | $TEE $OUT
echo " SAGA SSH ADAPTORS                                               " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION                      " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " PostgreSQL Found      : $HAVE_POSTGRESQL $POSTGRESQL_VERSION_S  " | $TEE $OUT
echo " PostgreSQL Location   : $POSTGRESQL_LOCATION                    " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT

