# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

AC_INIT()

AX_SAGA_CONFIG()

m4_include([config/saga_postgresql.m4])

AX_SAGA_CHECK_POSTGRESQL(8.0)
AC_CONFIG_FILES([config/saga.config.postgresql.c.mk])

CPP_HAVE_SOCI_POSTGRESQL=0
if test "$HAVE_SOCI_POSTGRESQL" = "yes"; then
  CPP_HAVE_SOCI_POSTGRESQL=1
fi

AC_SUBST(CPP_HAVE_SOCI_POSTGRESQL)

# create output files
AC_CONFIG_FILES([config/make.cfg])

ADAPTOR_ROOT=`pwd`
ADAPTOR_CONFDIR=$ADAPTOR_ROOT/config/

AC_SUBST(ADAPTOR_ROOT)
AC_SUBST(ADAPTOR_CONFDIR)

SAGA_CONFIGURE_OK=yes
if ! test "$HAVE_SAGA"       = "yes"; then SAGA_CONFIGURE_OK=no; fi
if ! test "$HAVE_POSTGRESQL" = "yes"; then SAGA_CONFIGURE_OK=no; fi
AC_SUBST([SAGA_CONFIGURE_OK])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA SSH ADAPTORS                                               " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $SAGA_LOCATION                          " >> $OUT
echo "       SAGA version    : $SAGA_VERSION                           " >> $OUT
echo "                                                                 " >> $OUT
echo " Adaptor Version       : $SAGA_PACKAGE_VERSION                   " >> $OUT
echo " Adaptor Revision      : $SAGA_PACKAGE_REVISION                  " >> $OUT
echo "                                                                 " >> $OUT
echo " PostgreSQL Found      : $HAVE_POSTGRESQL $POSTGRESQL_VERSION_S  " >> $OUT
echo " PostgreSQL Location   : $POSTGRESQL_LOCATION                    " >> $OUT
echo "                                                                 " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT

cat $OUT

