# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

m4_include([saga.m4])
m4_include([config/saga_ssh.m4])

AC_INIT()

AX_SAGA_CONFIG()

if test "x$TMP_SAGA_INSTTYPE" == "xinstall"; then
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/share/saga/config/])
else
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/config/])
fi


AX_SAGA_CHECK_SSH()

if test "$HAVE_SSH" = "yes"; then
  AX_SAGA_CHECK_SCP()
  AX_SAGA_CHECK_SSHFS()
fi

AC_CONFIG_FILES([config/saga.config.ssh.c.mk])
AC_CONFIG_FILES([ssh_context/ssh_context_adaptor.ini])
AC_CONFIG_FILES([ssh_file/ssh_file_adaptor.ini])
AC_CONFIG_FILES([ssh_job/ssh_job_adaptor.ini])

# translate defines into integers
CPP_HAVE_SSH=0
CPP_HAVE_SCP=0
CPP_HAVE_SSHFS=0

if test "$HAVE_SSH-$HAVE_SCP-$HAVE_SSHFS" = "yes-yes-yes"; then
  CPP_HAVE_SSH=1
  CPP_HAVE_SCP=1
  CPP_HAVE_SSHFS=1
fi

AC_SUBST(CPP_HAVE_SSH)
AC_SUBST(CPP_HAVE_SCP)
AC_SUBST(CPP_HAVE_SSHFS)

BUILD_ADAPTOR_CONTEXT=no
BUILD_ADAPTOR_FILESYSTEM=no
BUILD_ADAPTOR_JOB=no

if test "x$HAVE_SSH" = "xyes"; then
  if test "x$SAGA_HAVE_ADAPTOR_CONTEXT" = "xyes"; then
    BUILD_ADAPTOR_CONTEXT="yes"
  fi
fi

if test "x$HAVE_SSH" = "xyes"; then
  if test "x$SAGA_HAVE_ADAPTOR_JOB" = "xyes"; then
    BUILD_ADAPTOR_JOB="yes"
    BUILD_ADAPTOR_CONTEXT="yes"
  fi
fi

if test "$HAVE_SSHFS-$HAVE_SCP" = "yes-yes"; then
  if test "x$SAGA_HAVE_ADAPTOR_FILESYSTEM" = "xyes"; then
    BUILD_ADAPTOR_FILESYSTEM="yes"
    BUILD_ADAPTOR_CONTEXT="yes"
  fi
fi


if test "x$HAVE_SSH" = "xyes"; then
  SAGA_SSH_S="($SAGA_SSH)"
fi

if test "x$HAVE_SCP" = "xyes"; then
  SAGA_SCP_S="($SAGA_SCP)"
fi

if test "x$HAVE_SSHFS" = "xyes"; then
  SAGA_SSHFS_S="($SAGA_SSHFS)"
fi

AC_SUBST([BUILD_ADAPTOR_CONTEXT])
AC_SUBST([BUILD_ADAPTOR_FILESYSTEM])
AC_SUBST([BUILD_ADAPTOR_JOB])


# create output files
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/config.hpp])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
TEE="tee -a"

echo "                                                                 " | $TEE $OUT
echo " ========================================================        " | $TEE $OUT
echo " SAGA SSH ADAPTORS                                               " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION ($TMP_SAGA_INSTTYPE) " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Adaptor version       : $SAGA_LIB_VERSION                       " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " SSH found             : $HAVE_SSH  $SAGA_SSH_S                  " | $TEE $OUT
echo " SCP found             : $HAVE_SCP  $SAGA_SCP_S                  " | $TEE $OUT
echo " SSHFS found           : $HAVE_SSHFS  $SAGA_SSHFS_S              " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Context Adaptor       : $BUILD_ADAPTOR_CONTEXT                  " | $TEE $OUT
echo " File    Adaptor       : $BUILD_ADAPTOR_FILESYSTEM               " | $TEE $OUT
echo " Job     Adaptor       : $BUILD_ADAPTOR_JOB                      " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT


if test "$SAGA_RECURSIVE_CONFIG" = "yes" ; then
  cat $OUT >> $SAGA_ROOT/$OUT
fi

